[package]
name = "mpw"
version = "0.1.0"
authors = ["Dario Goetz <dario.goetz@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
base64 = "0.12"
log = "0.4.0"
env_logger = "0.7.0"
clap = "2"
rpassword = "4"
colored = "2"
