[package]
name = "mpw"
version = "0.1.0"
authors = ["Dario Goetz <dario.goetz@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
scrypt = { version = "0.11", default-features = false }
